lib/src/compiler/tests/testdata/errors/159.out
error[E047]: too many variables
 --> line:4:7
  |
4 |       for any i in (1..10) : ( true )
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ too many local variables